--- a/index.html
+++ b/index.html
@@ -6,5 +6,11 @@
     <Body>
         <h1>BLOG SPOT DE ALONSO</h1>
         <p>Este es mi primer blog</p>
+        <h4>NOTICIAS</h4>
+        <div>
+            <a href="#">Ultimas noticias</a>
+            <a href="#">Internacional</a>
+            <a href="#">Espectaculos</a>
+        </div>
     </Body>
 </html>
