--- a/index.html
+++ b/index.html
@@ -4,7 +4,17 @@
         <link rel="stylesheet" href="css/estilos.css">
     </head>
     <Body>
-        <h1>BLOG SPOT DE ALONSO</h1>
-        <p>Este es mi primer blog</p>
+        <div class="menubar">
+            <div>
+                <a href="#">Inicio</a>
+                <a href="#">Contenido de la semana</a>
+                <a href="#">Contactanos</a>
+            </div>
+        </div>
+        <div class="container">
+            <h1>BLOG SPOT DE ALONSO</h1>
+            <p>Este es mi primer blog</p>
+        </div>
+            
     </Body>
 </html>
