--- a/index.html
+++ b/index.html
@@ -15,6 +15,11 @@
             <h1>BLOG SPOT DE ALONSO</h1>
             <p>Este es mi primer blog</p>
         </div>
+        <div class="footer">
+            <a href="#">Facebook</a>
+            <a href="#">Youtube/BlogAlonso</a>
+            <a href="#">Contactanos</a>
+        </div>
             
     </Body>
 </html>
