--- a/index.html
+++ b/index.html
@@ -14,6 +14,10 @@
         <div class="container">
             <h1>BLOG SPOT DE ALONSO</h1>
             <p>Este es mi primer blog</p>
+            <div>
+                <h2>RESUMEN DE LA SEMANA</h2>
+                <p>Este es el resumen de la semana jaja mentira</p>
+            </div>
         </div>
             
     </Body>
