Cambios en el background y texto jaja

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <p>Este es mi primer blog</p>
             <div>
                 <h2>RESUMEN DE LA SEMANA</h2>
-                <p>Este es el resumen de la semana jaja mentira</p>
+                <p>Este es el resumen de la semana</p>
             </div>
         </div>
         <div class="footer">
