--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
             <a href="#">Facebook</a>
             <a href="#">Youtube/BlogAlonso</a>
             <a href="#">Contactanos</a>
+            <a href="#">Insertar logo</a>
         </div>
             
     </Body>
