--- a/index.html
+++ b/index.html
@@ -2,26 +2,28 @@
     <head>
         <title>BlogSpot</title>
         <link rel="stylesheet" href="css/estilos.css">
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
     </head>
     <Body>
-        <div class="menubar">
-            <a href="#">Inicio</a>
-            <a href="#">Contenido de la semana</a>
-            <a href="#">Contactanos</a>
-        </div>
         <div class="container">
-            <h1>BLOG SPOT DE ALONSO</h1>
-            <p>Este es mi primer blog</p>
-            <div>
-                <h2>RESUMEN DE LA SEMANA</h2>
-                <p>Este es el resumen de la semana</p>
+            <div class="menubar">
+                <a href="#">Inicio</a>
+                <a href="#">Contenido de la semana</a>
+                <a href="#">Contactanos</a>
+            </div>
+            <div class="main">
+                <h1>BLOG SPOT DE ALONSO</h1>
+                <p>Este es mi primer blog</p>
+                <div>
+                    <h2>RESUMEN DE LA SEMANA</h2>
+                    <p>Este es el resumen de la semana</p>
+                </div>
+            </div>
+            <div class="footer">
+                <a href="#">Facebook</a>
+                <a href="#">Youtube/BlogAlonso</a>
+                <a href="#">Contactanos</a>
             </div>
         </div>
-        <div class="footer">
-            <a href="#">Facebook</a>
-            <a href="#">Youtube/BlogAlonso</a>
-            <a href="#">Contactanos</a>
-        </div>
-            
     </Body>
 </html>
