--- a/index.html
+++ b/index.html
@@ -28,14 +28,16 @@
                 </div>
                 <br>
                 <div class="contact">
-                    <h4>Contactanos</h4>
-                    <div class="mb-3">
-                        <label for="exampleFormControlInput1" class="form-label">Email</label>
-                        <input type="text" class="form-control" id="exampleFormControlInput1" placeholder="usuario@gmail.com">
-                    </div>
-                    <div class="mb-3">
-                        <label for="exampleFormControlTextarea1" class="form-label">Comentarios al dueño del blog</label>
-                        <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+                    <div>
+                        <h4>Contactanos</h4>
+                        <div class="mb-3">
+                            <label for="exampleFormControlInput1" class="form-label">Email</label>
+                            <input type="text" class="form-control" id="exampleFormControlInput1" placeholder="usuario@gmail.com">
+                        </div>
+                        <div class="mb-3">
+                            <label for="exampleFormControlTextarea1" class="form-label">Comentarios al dueño del blog</label>
+                            <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+                        </div>
                     </div>
                 </div>
             </div>
