Trabajo colaborativo HEADAER

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <Body>
         <div class="container">
             <div class="menubar">
+                <img id="logo" src="imagenes/cafe.jpg" alt="cafe">
                 <a href="#">Inicio</a>
                 <a href="#">Contenido de la semana</a>
                 <a href="#">Contactanos</a>
