--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
                 <img id="logo" src="imagenes/cafe.jpg" alt="cafe">
                 <a href="#">Inicio</a>
                 <a href="#">Contenido de la semana</a>
-                <a href="#">Contactanos</a>
+                <a href="#">Cont&aacute;ctanos</a>
             </div>
             <div class="main">
                 <h1>BLOG SPOT DE ALONSO</h1>
@@ -24,7 +24,7 @@
                 <div class="head-footer">
                     <a href="#">Facebook</a>
                     <a href="#">Youtube/BlogAlonso</a>
-                    <a href="#">Contactanos</a>
+                    <a href="#">Cont&aacute;ctanos</a>
                     <a href="#">Insertar logo</a>
                 </div>
                 <br>
