Imagen agrega al blog

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
             <div class="main">
                 <h1>BLOG SPOT DE ALONSO</h1>
                 <p>Este es mi primer blog</p>
+                <p><img src="imagenes/perro.jpg" alt="" width="100%"></p>
                 <div>
                     <h2>RESUMEN DE LA SEMANA</h2>
                     <p>Este es el resumen de la semana</p>
