Imagen agregada desde repositorio para imagenes

--- a/index.html
+++ b/index.html
@@ -15,7 +15,11 @@
             <div class="main">
                 <h1>BLOG SPOT DE ALONSO</h1>
                 <p>Este es mi primer blog</p>
-                <p><img src="imagenes/perro.jpg" alt="" width="100%"></p>
+                <p>
+                    <a href="https://imgur.com/iORhW4G">
+                        <img src="https://i.imgur.com/iORhW4G.jpg" alt="" width="100%">
+                    </a>
+                </p>
                 <div>
                     <h2>RESUMEN DE LA SEMANA</h2>
                     <p>Este es el resumen de la semana</p>
